--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 	<div class="prop-div row">
 		<div class="col">
 			<h3 v-text="selectedProp.address"></h3>
-			<img class="app-img-2x" src="/images/{{selectedProp.img}}"><br>
+			<img class="app-img-2x" src="images/{{selectedProp.img}}"><br>
 			<h4 class="row head">Near by Places : </h4>
 		</div>
 		<div class="col">
