--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-		<script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places,weather"></script>
+		<!-- <script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places,weather"></script> -->
+		  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB24xo0cRRsW52F3LnNwQitl84WqZhhbbc&libraries=places,weather" type="text/javascript"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 
