--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8" name="google-site-verification" content="UnNy47PiwJGwrRUmuIpYt2-SRlCV6AzULstu1PxM_gU" />
 		<title>SM Realestate</title>
 
 		<link rel="stylesheet" href='css/bootstrap.min.css'/>
